Changelog
=========

Changes from cgkit-2.0.0alpha6 to cgkit-2.0.0alpha7:

New features:

- The license has changed! Instead of the LGPL cgkit now uses the
  MPL/GPL/LGPL tri-license (this applies to the Python package "cgkit").
  The Maya package und plugin uses the MPL.

Bug fixes/enhancements:

- RMShader: Array parameters can now be processed as well.
- A Globals section can now appear more than once without that it resets
  some of the scene values (like the up vector or handedness).
- The built-in materials (GLMaterial, Material3DS, OBJMaterial) can now
  also be used for baking.
- Bugfix: When baking maps, the transformation of the object was ignored.
  This led to incorrect surface shading when the transformation was 
  anything else than the identity.
- WorldObjects now support comparison (i.e. two WorldObject wrappers that
  reference the same C++ object will now appear as identical)
- The setup script was checking for Boost.Python headers even when the
  'light' version was installed. This is fixed.
- Using the GLMaterial class for RenderMan renders was broken (because
  it was still assumed a GLMaterial can only have one texture)
- RMShader: The declare() method did not work when the name argument
  didn't contain an inline declaration and the parameter name started
  with a SL type (such as "colorscale").

----------------------------------------------------------------------
Changes from cgkit-2.0.0alpha5 to cgkit-2.0.0alpha6:

New features:

- New module "glslangparams" to extract uniform, attribute and varying
  variables from OpenGL 2 shaders.
- New module "glslangtokenize" to create tokens from an OpenGL 2 shader file
- New module "lwob" to read Lightwave Object files.
- New *.lwo import plugin using the lwob module
- GLMaterial: The material can now store more than just one texture.
- GLMaterial: New attribute vertex_shader and fragment_shader that take
  a list of GLShader objects (this is in preparation for OpenGL 2.0 shader
  support)